crates/chapbook-ffi/include/chapbook.h

typedef enum cb_status cb_status;
typedef int32_t cb_status;
/**
 * Which string an entry accessor should answer with.
 */
typedef enum cb_entry_field {
    /**
     * The title, as shown on a row.
     */
    CB_ENTRY_TITLE = 0,
    /**
     * Plain-text summary. HTML descriptions are deliberately not
     * offered: a host would have to sanitize what it did not parse.
     */
    CB_ENTRY_SUMMARY = 1,
    /**
     * The publisher.
     */
    CB_ENTRY_PUBLISHER = 2,
    /**
     * The language tag the catalog states.
     */
    CB_ENTRY_LANGUAGE = 3,
    /**
     * The series name.
     */
    CB_ENTRY_SERIES = 4,
    /**
     * A thumbnail's absolute URL — fetch it with the platform's own
     * image loader, sending the same `Authorization` if the catalog
     * wants one.
     */
    CB_ENTRY_THUMBNAIL_URL = 5,
    /**
     * A full cover's absolute URL, for a detail screen.
     */
    CB_ENTRY_COVER_URL = 6,
    /**
     * Where tapping goes: the feed a navigation entry points at, or a
     * publication's acquisition. A commercial entry whose only link is
     * a purchase page answers with that page, which a host opens in a
     * browser rather than downloading.
     */
    CB_ENTRY_HREF = 7,
    /**
     * The entry's OPDS id, opaque — comic-server ids contain slashes
     * and dots. A stable key for a host's own record of a download it
     * enqueued; never normalize it, and never build a path out of it.
     */
    CB_ENTRY_ID = 8,
    /**
     * The acquisition to fetch, for a host performing the download
     * itself. Unlike [`CB_ENTRY_HREF`](cb_entry_field::CB_ENTRY_HREF)
     * this never falls back to another kind of link, so a navigation
     * row answers `CB_ERR_UNAVAILABLE` rather than handing back a feed
     * URL that would download as a book.
     *
     * Send it with `Accept` set to the wildcard media range — type
     * `*`, subtype `*` — and nothing else of the engine's. The header
     * list is not crossed here because there is exactly one and it is
     * constant. (Spelled out rather than written literally: the
     * two-character form would close this comment in the generated C
     * header, which `tests/header.rs` compiles.)
     */
    CB_ENTRY_DOWNLOAD_URL = 9,
    /**
     * A filename for the user's benefit: one safe path component, with
     * no separators or control characters, and an extension guessed
     * from the advertised type.
     *
     * Advice, not instruction. It is not unique, it means nothing to
     * the engine — format is decided by sniffing bytes — and a host
     * should validate it against its own filesystem's rules. Renaming
     * the file is expected and costs nothing.
     */
    CB_ENTRY_DOWNLOAD_FILENAME = 10,
    /**
     * The acquisition link's advertised type, verbatim. A hint for the
     * host's own UI; do not trust it to decide how to read the file.
     */
    CB_ENTRY_DOWNLOAD_MEDIA_TYPE = 11,
    /**
     * The position-sync service this entry advertises, absolute.
     *
     * **Read it before the download, not after.** It lives in the
     * catalog entry and nowhere else, so a host whose transfer outlives
     * the feed must persist it alongside the job and hand it to
     * [`cb_library_set_sync_targets`](crate::cb_library_set_sync_targets)
     * once the file lands. `CB_ERR_UNAVAILABLE` where the entry
     * advertises none — and in a build without sync, which reports no
     * targets exactly as the row flags do.
     */
    CB_ENTRY_PROGRESSION_URL = 12,
    /**
     * The Web Annotation container this entry advertises, absolute.
     * Everything said of
     * [`CB_ENTRY_PROGRESSION_URL`](cb_entry_field::CB_ENTRY_PROGRESSION_URL)
     * applies.
     */
    CB_ENTRY_ANNOTATION_CONTAINER = 13,
} cb_entry_field;
/**
 * Which of a facet's strings to read.
 */
typedef enum cb_facet_field {
    /**
     * The facet's own label — "English", "By title".
     */
    CB_FACET_LABEL = 0,
    /**
     * Its group's name — "Language", "Sort by".
     */
    CB_FACET_GROUP = 1,
    /**
     * The URL that applies it; hand it to [`cb_catalog_fetch`].
     */
    CB_FACET_HREF = 2,
} cb_facet_field;
/**
 * Which way through a paged feed.
 */
typedef enum cb_catalog_page {
    CB_PAGE_NEXT = 0,
    CB_PAGE_PREVIOUS = 1,
} cb_catalog_page;
/**
 * An open catalog, holding the last feed it fetched — and, since the
 * application layer arrived, the crumb trail that led there and the
 * login it was last refused with; see [`cb_catalog_go`](crate::cb_catalog_go)
 * and its neighbours in the `app` module. Opaque.
 *
 * Not thread-safe, like every other handle here: it belongs to one
 * thread at a time, and may move between them.
 */
typedef struct cb_catalog cb_catalog;
/**
 * One row of a catalog listing. Strings travel on their own calls.
 */
typedef struct cb_entry {
    enum cb_entry_kind kind;
    /**
     * How many authors [`cb_catalog_entry_author`] will answer for.
     */
    size_t author_count;
    /**
     * Whether this entry can be downloaded at all. A commercial entry
     * that offers only a purchase link answers false, and a host should
     * send the reader to [`cb_catalog_entry_href`] in a browser rather
     * than pretending it can acquire it.
     */
    bool can_download;
    /**
     * Freely downloadable, as against borrowed or bought. What tells a
     * "Get" button from a "Buy" one.
     */
    bool is_open_access;
    bool has_thumbnail;
    bool has_cover;
    bool has_summary;
    bool has_series;
    /**
     * Where in its series, when the entry says. Meaningful only with
     * `has_series` *and* `has_series_position`.
     */
    double series_position;
    bool has_series_position;
    /**
     * Whether the entry advertises a position-sync service, an
     * annotation container, or both. A host does not have to act on
     * these — [`cb_catalog_download`] records them itself — but a
     * catalog that syncs is worth saying so on the row.
     */
    bool syncs_position;
    bool syncs_annotations;
} cb_entry;
/**
 * One facet: a way to narrow the current feed, as the catalog offers
 * it. Its label and href travel on their own calls.
 */
typedef struct cb_facet {
    /**
     * Which group it belongs to — "Language", "Sort by". Facets in a
     * group are alternatives; a host draws one control per group.
     */
    size_t group;
    /**
     * Whether this facet is the one currently in force.
     */
    bool active;
    /**
     * How many entries it would show, when the catalog says.
     */
    uint64_t count;
    bool has_count;
} cb_facet;
/**
 * One entry's plain data.
 */
cb_status cb_catalog_entry(const struct cb_catalog *catalog, size_t index, struct cb_entry *out);
/**
 * One of an entry's strings. `CB_ERR_UNAVAILABLE` where the entry
 * carries none — which the flags on [`cb_catalog_entry`] predict for
 * the ones a row draws.
 */
cb_status cb_catalog_entry_text(const struct cb_catalog *catalog,
                                size_t index,
                                enum cb_entry_field field,
                                char *buf,
                                size_t cap,
                                size_t *needed);
/**
 * One of an entry's authors, by index into its `author_count`.
 */
cb_status cb_catalog_entry_author(const struct cb_catalog *catalog,
                                  size_t index,
                                  size_t author,
                                  char *buf,
                                  size_t cap,
                                  size_t *needed);
/**
 * How many facets the held feed offers. Zero is ordinary.
 */
cb_status cb_catalog_facet_count(const struct cb_catalog *catalog, size_t *count);
/**
 * One facet's plain data.
 */
cb_status cb_catalog_facet(const struct cb_catalog *catalog, size_t index, struct cb_facet *out);
/**
 * One of a facet's strings.
 */
cb_status cb_catalog_facet_text(const struct cb_catalog *catalog,
                                size_t index,
                                enum cb_facet_field field,
                                char *buf,
                                size_t cap,
                                size_t *needed);
/**
 * The URL of the next or previous page of a long feed, for the
 * infinite scroll a phone browses with. `CB_ERR_UNAVAILABLE` at the
 * end, which is how a host knows to stop asking.
 */
cb_status cb_catalog_page_href(const struct cb_catalog *catalog,
                               enum cb_catalog_page direction,
                               char *buf,
                               size_t cap,
                               size_t *needed);
/**
 * Whether this catalog offers a search — what decides if a search box
 * is drawn at all.
 */
cb_status cb_catalog_has_search(const struct cb_catalog *catalog, bool *has);
/**
 * Put an entry on the shelf: fetch it, import it into the library at
 * `library_dir`, record the sync services it advertises, and answer
 * with the library row it became.
 *
 * **This is the call the whole module exists for.** A book's position
 * and annotation services live in its catalog entry and nowhere else,
 * so a host that downloaded by hand could store sync targets it had no
 * way to learn — and a book added any other way is a book that will
 * never reconcile. Everything else here is how a reader finds the entry
 * to hand to this.
 *
 * **Blocking, and the slowest call in this ABI**: it is a whole book
 * over the network. Run it off the thread that draws — and if the
 * transfer has to survive the app being suspended, do not use this call
 * at all. No callback rescues it: every callback in this ABI blocks
 * until the transfer settles, which is the one thing a background
 * transfer does not do.
 *
 * For that, take the same job apart and own it. Read
 * [`CB_ENTRY_DOWNLOAD_URL`](cb_entry_field::CB_ENTRY_DOWNLOAD_URL) and
 * the two sync-service fields beside it, fetch with `WorkManager` or a
 * background `URLSession`, then call
 * [`cb_library_import_file`](crate::cb_library_import_file) and
 * [`cb_library_set_sync_targets`](crate::cb_library_set_sync_targets)
 * when the file lands. This call is exactly those pieces run back to
 * back on one thread, which is why the sync services have to be read
 * *before* a transfer that will outlive the feed.
 *
 * `CB_ERR_UNAVAILABLE` for an entry with nothing to acquire — a
 * navigation row, or a purchase-only entry whose
 * [`cb_catalog_entry_href`](cb_catalog_entry_text) belongs in a
 * browser. The staging file is removed whatever happens; the library
 * keeps its own copy.
 */
cb_status cb_catalog_download(struct cb_catalog *catalog,
                              size_t index,
                              const char *library_dir,
                              int64_t *book_id);
/**
 * The title of the authentication document from the last
 * `CB_ERR_AUTH_REQUIRED` — the catalog's own name for itself, which
 * belongs at the top of a login sheet.
 * `CB_ERR_UNAVAILABLE` when no fetch has been refused.
 */
cb_status cb_catalog_auth_title(const struct cb_catalog *catalog,
                                char *buf,
                                size_t cap,
                                size_t *needed);
/**
 * Whether the refused catalog offers the username-and-password flow —
 * the one [`cb_catalog_set_basic_auth`] speaks, and the only one OPDS
 * defines that a reader can complete without a browser.
 *
 * False means the catalog wants something else (OAuth, SAML); a host
 * should say so plainly rather than showing a login that cannot work.
 */
cb_status cb_catalog_auth_offers_basic(const struct cb_catalog *catalog, bool *offers);