windows/Chapbook/Interop.cs


    [LibraryImport(Library)]
    internal static partial Status cb_catalog_entry(nint catalog, nuint index, out NativeEntry entry);

    [LibraryImport(Library)]
    internal static partial Status cb_catalog_entry_text(
        nint catalog, nuint index, EntryField field, byte[]? buf, nuint cap, out nuint needed);

    [LibraryImport(Library)]
    internal static partial Status cb_catalog_entry_author(
        nint catalog, nuint index, nuint author, byte[]? buf, nuint cap, out nuint needed);

    [LibraryImport(Library)]
    internal static partial Status cb_catalog_facet_count(nint catalog, out nuint count);

    [LibraryImport(Library)]
    internal static partial Status cb_catalog_facet(nint catalog, nuint index, out NativeFacet facet);

    [LibraryImport(Library)]
    internal static partial Status cb_catalog_facet_text(
        nint catalog, nuint index, FacetField field, byte[]? buf, nuint cap, out nuint needed);

    [LibraryImport(Library)]
    internal static partial Status cb_catalog_page_href(
        nint catalog, CatalogPage direction, byte[]? buf, nuint cap, out nuint needed);

    [LibraryImport(Library)]
    internal static partial Status cb_catalog_has_search(nint catalog, out byte has);

    [LibraryImport(Library, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial Status cb_catalog_download(
        nint catalog, nuint index, string libraryDir, out long book);

    [LibraryImport(Library)]
    internal static partial Status cb_catalog_auth_title(
        nint catalog, byte[]? buf, nuint cap, out nuint needed);

    [LibraryImport(Library)]
    internal static partial Status cb_catalog_auth_offers_basic(nint catalog, out byte offers);
}
